tests around InstrumentMonitor

--- a/src/LiberisLabs.DogStatsD.Interceptors/LiberisLabs.DogStatsD.Interceptors.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors/LiberisLabs.DogStatsD.Interceptors.csproj
@@ -49,9 +49,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataDogInstrumentMonitor.cs" />
+    <Compile Include="MonitorInterceptorAdapter.cs" />
+    <Compile Include="Monitors\InstrumentMonitor.cs" />
     <Compile Include="DogStatdInterceptor.cs" />
     <Compile Include="DogStatsdWrapper.cs" />
+    <Compile Include="IInterceptor.cs" />
     <Compile Include="IDogStatsd.cs" />
     <Compile Include="IMonitor.cs" />
     <Compile Include="InstrumentAttribute.cs" />
@@ -61,6 +63,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
