--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
@@ -48,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTests.cs" />
+    <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForException.cs" />
+    <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForMethodsReturningTasks.cs" />
     <Compile Include="MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTestsForTaskReturnType.cs" />
     <Compile Include="MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTests.cs" />
     <Compile Include="Monitors\InstrumentMonitorTests.cs" />
