--- a/src/LiberisLabs.DogStatsD.Interceptors.Annotations/LiberisLabs.DogStatsD.Interceptors.Annotations.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Annotations/LiberisLabs.DogStatsD.Interceptors.Annotations.csproj
@@ -4,14 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{197B6FB4-0BB8-4193-B8FD-0A5350B3307F}</ProjectGuid>
+    <ProjectGuid>{DCA5E56F-DF0A-4E63-8A31-5103766B2EC3}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LiberisLabs.DogStatsD.Interceptors</RootNamespace>
-    <AssemblyName>LiberisLabs.DogStatsD.Interceptors</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>LiberisLabs.DogStatsD.Interceptors.Annotations</RootNamespace>
+    <AssemblyName>LiberisLabs.DogStatsD.Interceptors.Annotations</AssemblyName>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,17 +29,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.3.3.3\lib\net40-client\Castle.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="StatsdClient, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f641b6aa3c3157d1, processorArchitecture=MSIL">
-      <HintPath>..\packages\DogStatsD-CSharp-Client.2.1.1\lib\net35\StatsdClient.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -49,25 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMonitorInterceptorFactory.cs" />
-    <Compile Include="MonitorInterceptorAdapter.cs" />
-    <Compile Include="Monitors\InstrumentMonitor.cs" />
-    <Compile Include="DogStatdInterceptor.cs" />
-    <Compile Include="DogStatsdWrapper.cs" />
-    <Compile Include="IInterceptor.cs" />
-    <Compile Include="IDogStatsd.cs" />
-    <Compile Include="Monitors\IMonitor.cs" />
-    <Compile Include="MonitorInterceptorFactory.cs" />
+    <Compile Include="InstrumentAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LiberisLabs.DogStatsD.Interceptors.Annotations\LiberisLabs.DogStatsD.Interceptors.Annotations.csproj">
-      <Project>{DCA5E56F-DF0A-4E63-8A31-5103766B2EC3}</Project>
-      <Name>LiberisLabs.DogStatsD.Interceptors.Annotations</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
