Timing task based methods.

--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Helpers\TypeBuilder.cs" />
     <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTestsForTaskReturnType.cs" />
     <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTests.cs" />
+    <Compile Include="Interceptors\TaskTimerInterceptorTests\TaskTimerInterceptorTestsOnEntry.cs" />
+    <Compile Include="Interceptors\TaskTimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnException.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnEntry.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
