statName is build outside of interceptors. code reuse <3

--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -56,10 +56,10 @@
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForException.cs" />
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForMethodsReturningTasks.cs" />
     <Compile Include="Helpers\TypeBuilder.cs" />
-    <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTestsForTaskReturnType.cs" />
-    <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTests.cs" />
-    <Compile Include="Interceptors\TaskTimerInterceptorTests\TaskTimerInterceptorTestsOnEntry.cs" />
-    <Compile Include="Interceptors\TaskTimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
+    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests.cs" />
+    <Compile Include="Interceptors\MonitorInterceptorAdapterTests.cs" />
+    <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorTestsOnEntry.cs" />
+    <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnException.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnEntry.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
