--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -55,7 +55,8 @@
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTests.cs" />
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForException.cs" />
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForMethodsReturningTasks.cs" />
-    <Compile Include="Helpers\TypeBuilder.cs" />
+    <Compile Include="Helpers\MethodInfoBuilder.cs" />
+    <Compile Include="StatNameCreatorTests.cs" />
     <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests.cs" />
     <Compile Include="Interceptors\MonitorInterceptorAdapterTests.cs" />
     <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorTestsOnEntry.cs" />
