some tests around the factory for creating interceptors.

--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForException.cs" />
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForMethodsReturningTasks.cs" />
     <Compile Include="Helpers\MethodInfoBuilder.cs" />
+    <Compile Include="InterceptorFactoryTests.cs" />
     <Compile Include="StatNameCreatorTests.cs" />
     <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests.cs" />
     <Compile Include="Interceptors\MonitorInterceptorAdapterTests.cs" />
