Tests for CanIntercept for timer.

--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -57,6 +57,8 @@
     <Compile Include="DogStatdInterceptorTests\DogStatdInterceptorTestsForMethodsReturningTasks.cs" />
     <Compile Include="Helpers\MethodInfoBuilder.cs" />
     <Compile Include="InterceptorFactoryTests.cs" />
+    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorCanInterceptForTaskMethod.cs" />
+    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorCanInterceptForTimeAttribute.cs" />
     <Compile Include="StatNameCreatorTests.cs" />
     <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests.cs" />
     <Compile Include="Interceptors\MonitorInterceptorAdapterTests.cs" />
@@ -74,6 +76,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\LiberisLabs.DogStatsD.Interceptors.Annotations\LiberisLabs.DogStatsD.Interceptors.Annotations.csproj">
+      <Project>{DCA5E56F-DF0A-4E63-8A31-5103766B2EC3}</Project>
+      <Name>LiberisLabs.DogStatsD.Interceptors.Annotations</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LiberisLabs.DogStatsD.Interceptors\LiberisLabs.DogStatsD.Interceptors.csproj">
       <Project>{197B6FB4-0BB8-4193-B8FD-0A5350B3307F}</Project>
       <Name>LiberisLabs.DogStatsD.Interceptors</Name>
