--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -62,7 +62,9 @@
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorCanInterceptForTaskMethod.cs" />
     <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorCanInterceptForTimeAttribute.cs" />
     <Compile Include="StatNameCreatorTests.cs" />
-    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests.cs" />
+    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests\TaskMonitorInterceptorAdapterTestsForCanIntercept.cs" />
+    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests\TaskMonitorInterceptorAdapterTestsForCanInterceptNoneTask.cs" />
+    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests\TaskMonitorInterceptorAdapterTests.cs" />
     <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTests.cs" />
     <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorTestsOnEntry.cs" />
     <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorCanInterceptForNoneTaskMethod.cs" />
