--- a/src/LiberisLabs.DogStatsD.Interceptors/LiberisLabs.DogStatsD.Interceptors.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors/LiberisLabs.DogStatsD.Interceptors.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="LiberisLabs.DogStatsD.Interceptors.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
