--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@
     only:
       - master
    
-  version: 0.0.{build}
+  version: 1.0.0-beta
 
   assembly_info:
     assembly_version: '{version}'
