--- a/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
+++ b/src/LiberisLabs.DogStatsD.Interceptors.Tests/LiberisLabs.DogStatsD.Interceptors.Tests.csproj
@@ -1,103 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EAE9EFB4-43B5-42B3-9AC3-A82984C7B72D}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LiberisLabs.DogStatsD.Interceptors.Tests</RootNamespace>
-    <AssemblyName>LiberisLabs.DogStatsD.Interceptors.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
-      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Moq, Version=4.5.28.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
-      <HintPath>..\packages\Moq.4.5.28\lib\net45\Moq.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.5.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.5.0\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0-preview-20170628-02" />
+    <PackageReference Include="Moq" Version="4.8.2" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.1.18" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.18" />
+    <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="DogStatsdInterceptorTests\DogStatsdInterceptorTests.cs" />
-    <Compile Include="DogStatsdInterceptorTests\DogStatsdInterceptorTestsForException.cs" />
-    <Compile Include="DogStatsdInterceptorTests\DogStatsdInterceptorTestsForMethodsReturningTasks.cs" />
-    <Compile Include="Helpers\MethodInfoBuilder.cs" />
-    <Compile Include="InterceptorFactoryTests.cs" />
-    <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTestsForCanIntercept.cs" />
-    <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTestsForCanInterceptTask.cs" />
-    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorCanInterceptForTaskMethod.cs" />
-    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorCanInterceptForTimeAttribute.cs" />
-    <Compile Include="StatNameCreatorTests.cs" />
-    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests\TaskMonitorInterceptorAdapterTestsForCanIntercept.cs" />
-    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests\TaskMonitorInterceptorAdapterTestsForCanInterceptNoneTask.cs" />
-    <Compile Include="TaskInterceptors\TaskMonitorInterceptorAdapterTests\TaskMonitorInterceptorAdapterTests.cs" />
-    <Compile Include="Interceptors\MonitorInterceptorAdapterTests\MonitorInterceptorAdapterTests.cs" />
-    <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorTestsOnEntry.cs" />
-    <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorCanInterceptForNoneTaskMethod.cs" />
-    <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TaskTimerInterceptorCanInterceptForTimeAttribute.cs" />
-    <Compile Include="TaskInterceptors\TaskTimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
-    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnException.cs" />
-    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnEntry.cs" />
-    <Compile Include="Interceptors\TimerInterceptorTests\TimerInterceptorTestsOnExit.cs" />
-    <Compile Include="Monitors\InstrumentMonitorTests.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TaskInterceptors\InterceptorAdapterTests.cs" />
+    <ProjectReference Include="..\LiberisLabs.DogStatsD.Interceptors\LiberisLabs.DogStatsD.Interceptors.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
-  <ItemGroup>
-    <ProjectReference Include="..\LiberisLabs.DogStatsD.Interceptors.Annotations\LiberisLabs.DogStatsD.Interceptors.Annotations.csproj">
-      <Project>{DCA5E56F-DF0A-4E63-8A31-5103766B2EC3}</Project>
-      <Name>LiberisLabs.DogStatsD.Interceptors.Annotations</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LiberisLabs.DogStatsD.Interceptors\LiberisLabs.DogStatsD.Interceptors.csproj">
-      <Project>{197B6FB4-0BB8-4193-B8FD-0A5350B3307F}</Project>
-      <Name>LiberisLabs.DogStatsD.Interceptors</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
